// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpponentBoardPreview /> does not render if no opponents 1`] = `""`;

exports[`<OpponentBoardPreview /> renders current player if includeCurrentPlayer 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="column"
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Box)
      flexDirection="column"
      width="317px"
    >
      <PreviewBoard
        board={
          [
            [
              null,
            ],
          ]
        }
        tileSize={15}
      />
      <PreviewHand
        hand={[]}
        tileSize={15}
      />
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sx={
      {
        "width": "100%",
      }
    }
  >
    <ForwardRef(Box)
      display="flex"
      justifyContent="space-between"
    >
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleLeftClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateBeforeIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(TextField)
        disabled={true}
        onChange={[MockFunction handleSelectedPlayerChange]}
        select={true}
        size="small"
        value="opponent"
      >
        <ForwardRef(MenuItem)
          key="playerId"
          value="playerId"
        >
          username
        </ForwardRef(MenuItem)>
      </ForwardRef(TextField)>
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleRightClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateNextIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`<OpponentBoardPreview /> renders empty board and hand when selectedIndex is out of bounds 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="column"
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Box)
      flexDirection="column"
      width="317px"
    >
      <PreviewBoard
        board={
          [
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
          ]
        }
        tileSize={15}
      />
      <PreviewHand
        hand={[]}
        tileSize={15}
      />
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sx={
      {
        "width": "100%",
      }
    }
  >
    <ForwardRef(Box)
      display="flex"
      justifyContent="space-between"
    >
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleLeftClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateBeforeIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(TextField)
        disabled={true}
        onChange={[MockFunction handleSelectedPlayerChange]}
        select={true}
        size="small"
        value="opponent"
      >
        <ForwardRef(MenuItem)
          key="opponent"
          value="opponent"
        >
          username
        </ForwardRef(MenuItem)>
      </ForwardRef(TextField)>
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleRightClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateNextIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`<OpponentBoardPreview /> renders properly with multiple opponents 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="column"
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Box)
      flexDirection="column"
      width="317px"
    >
      <PreviewBoard
        board={
          [
            [
              null,
            ],
          ]
        }
        tileSize={15}
      />
      <PreviewHand
        hand={[]}
        tileSize={15}
      />
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sx={
      {
        "width": "100%",
      }
    }
  >
    <ForwardRef(Box)
      display="flex"
      justifyContent="space-between"
    >
      <ForwardRef(IconButton)
        disabled={false}
        onClick={[MockFunction handleLeftClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateBeforeIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(TextField)
        disabled={false}
        onChange={[MockFunction handleSelectedPlayerChange]}
        select={true}
        size="small"
        value="opponent"
      >
        <ForwardRef(MenuItem)
          key="opponent"
          value="opponent"
        >
          username
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="opponent2"
          value="opponent2"
        >
          username
        </ForwardRef(MenuItem)>
      </ForwardRef(TextField)>
      <ForwardRef(IconButton)
        disabled={false}
        onClick={[MockFunction handleRightClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateNextIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`<OpponentBoardPreview /> renders properly with one opponent 1`] = `
<ForwardRef(Grid)
  alignItems="center"
  container={true}
  direction="column"
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
  >
    <ForwardRef(Box)
      flexDirection="column"
      width="317px"
    >
      <PreviewBoard
        board={
          [
            [
              null,
            ],
          ]
        }
        tileSize={15}
      />
      <PreviewHand
        hand={[]}
        tileSize={15}
      />
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sx={
      {
        "width": "100%",
      }
    }
  >
    <ForwardRef(Box)
      display="flex"
      justifyContent="space-between"
    >
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleLeftClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateBeforeIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
      <ForwardRef(TextField)
        disabled={true}
        onChange={[MockFunction handleSelectedPlayerChange]}
        select={true}
        size="small"
        value="opponent"
      >
        <ForwardRef(MenuItem)
          key="opponent"
          value="opponent"
        >
          username
        </ForwardRef(MenuItem)>
      </ForwardRef(TextField)>
      <ForwardRef(IconButton)
        disabled={true}
        onClick={[MockFunction handleRightClick]}
        size="small"
      >
        <Memo(ForwardRef(NavigateNextIcon))
          fontSize="small"
        />
      </ForwardRef(IconButton)>
    </ForwardRef(Box)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
